Assn4/y.output
Terminals unused in grammar

    UNION
    STRUCT
    TYPEDEF
    BEGIN_SINGLE_COMMENT
    END_SINGLE_COMMENT
    SINGLE_COMMENT
    BEGIN_MULTI_COMMENT
    END_MULTI_COMMENT
    MULTI_COMMENT
    WHITE_SPACE
    DOUBLE_CONST


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 constant: INTEGER_CONST
    6         | FLOAT_CONST
    7         | CHAR_CONST

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' argument_expression_list_opt ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | '(' type_name ')' '{' initializer_list '}'
   16                   | '(' type_name ')' '{' initializer_list ',' '}'

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 argument_expression_list_opt: argument_expression_list
   20                             | %empty

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: BITWISE_AND
   28               | MULT
   29               | PLUS
   30               | MINUS
   31               | BITWISE_NOT
   32               | LOGICAL_NOT

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULT cast_expression
   37                          | multiplicative_expression DIVIDE cast_expression
   38                          | multiplicative_expression MODULO cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LSHIFT additive_expression
   44                 | shift_expression RSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LT shift_expression
   47                      | relational_expression GT shift_expression
   48                      | relational_expression LEQ shift_expression
   49                      | relational_expression GEQ shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ relational_expression
   52                    | equality_expression NEQ relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression BITWISE_AND equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression XOR AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression LOGICAL_AND inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression LOGICAL_OR logical_AND_expression

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression '?' expression ':' conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MULT_ASGN
   69                    | DIV_ASGN
   70                    | MOD_ASGN
   71                    | ADD_ASGN
   72                    | SUB_ASGN
   73                    | LSHIFT_ASGN
   74                    | RSHIFT_ASGN
   75                    | AND_ASGN
   76                    | XOR_ASGN
   77                    | OR_ASGN

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list_opt ';'

   82 init_declarator_list_opt: init_declarator_list
   83                         | %empty

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   85                       | type_specifier declaration_specifiers_opt
   86                       | type_qualifier declaration_specifiers_opt
   87                       | function_specifier declaration_specifiers_opt

   88 declaration_specifiers_opt: declaration_specifiers
   89                           | %empty

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list ',' init_declarator

   92 init_declarator: declarator
   93                | declarator ASGN initializer

   94 storage_class_specifier: EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | _BOOL
  108               | _COMPLEX
  109               | _IMAGINARY
  110               | enum_specifier

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  112                         | type_qualifier specifier_qualifier_list_opt

  113 specifier_qualifier_list_opt: specifier_qualifier_list
  114                             | %empty

  115 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  116               | ENUM identifier_opt '{' enumerator_list ',' '}'
  117               | ENUM IDENTIFIER

  118 identifier_opt: IDENTIFIER
  119               | %empty

  120 enumerator_list: enumerator
  121                | enumerator_list ',' enumerator

  122 $@1: %empty

  123 enumerator: ENUMERATION_CONST $@1 ENUMERATION_CONST ASGN constant_expression

  124 type_qualifier: CONST
  125               | RESTRICT
  126               | VOLATILE

  127 function_specifier: INLINE

  128 declarator: pointer_opt direct_declarator

  129 pointer_opt: pointer
  130            | %empty

  131 direct_declarator: IDENTIFIER
  132                  | '(' declarator ')'
  133                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  134                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  135                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list_opt MULT ']'
  137                  | direct_declarator '(' parameter_type_list ')'
  138                  | direct_declarator '(' identifier_list_opt ')'

  139 type_qualifier_list_opt: type_qualifier_list
  140                        | %empty

  141 assignment_expression_opt: assignment_expression
  142                          | %empty

  143 identifier_list_opt: identifier_list
  144                    | %empty

  145 pointer: MULT type_qualifier_list_opt
  146        | MULT type_qualifier_list_opt pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | '{' initializer_list '}'
  160            | '{' initializer_list ',' '}'

  161 initializer_list: designation_opt initializer
  162                 | initializer_list ',' designation_opt initializer

  163 designation_opt: designation
  164                | %empty

  165 designation: designator_list '='

  166 designator_list: designator
  167                | designator_list designator

  168 designator: '[' constant_expression ']'
  169           | '.' IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER ':' statement
  177                  | CASE constant_expression ':' statement
  178                  | DEFAULT ':' statement

  179 compound_statement: '{' block_item_list_opt '}'

  180 block_item_list: block_item
  181                | block_item_list block_item

  182 block_item_list_opt: block_item_list
  183                    | %empty

  184 block_item: declaration
  185           | statement

  186 expression_statement: expression_opt ';'

  187 selection_statement: IF '(' expression ')' statement
  188                    | IF '(' expression ')' statement ELSE statement
  189                    | SWITCH '(' expression ')' statement

  190 iteration_statement: WHILE '(' expression ')' statement
  191                    | DO statement WHILE '(' expression ')' ';'
  192                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  193                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  194 expression_opt: expression
  195               | %empty

  196 jump_statement: GOTO IDENTIFIER ';'
  197               | CONTINUE ';'
  198               | BREAK ';'
  199               | RETURN expression_opt ';'

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  205 declaration_list_opt: declaration_list
  206                     | %empty

  207 declaration_list: declaration
  208                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 10 15 16 26 34 132 137 138 187 188 189 190 191 192 193
    ')' (41) 4 10 15 16 26 34 132 137 138 187 188 189 190 191 192 193
    ',' (44) 16 18 79 91 116 121 150 152 156 160 162
    '.' (46) 11 169
    ':' (58) 64 176 177 178
    ';' (59) 81 186 191 192 193 196 197 198 199
    '=' (61) 67 165
    '?' (63) 64
    '[' (91) 9 133 134 135 136 168
    ']' (93) 9 133 134 135 136 168
    '{' (123) 15 16 115 116 159 160 179
    '}' (125) 15 16 115 116 159 160 179
    error (256)
    BREAK (258) 198
    RETURN (259) 199
    CASE (260) 177
    FOR (261) 192 193
    WHILE (262) 190 191
    GOTO (263) 196
    SIZEOF (264) 25 26
    CONTINUE (265) 197
    IF (266) 187 188
    DO (267) 191
    SWITCH (268) 189
    ELSE (269) 188
    FLOAT (270) 103
    SHORT (271) 100
    CHAR (272) 99
    _BOOL (273) 107
    _IMAGINARY (274) 109
    _COMPLEX (275) 108
    INT (276) 101
    DOUBLE (277) 104
    LONG (278) 102
    VOID (279) 98
    SIGNED (280) 105
    AUTO (281) 96
    UNSIGNED (282) 106
    ENUM (283) 115 116 117
    UNION (284)
    STRUCT (285)
    TYPEDEF (286)
    CONST (287) 124
    DEFAULT (288) 178
    STATIC (289) 95 134 135
    REGISTER (290) 97
    RESTRICT (291) 125
    VOLATILE (292) 126
    EXTERN (293) 94
    INLINE (294) 127
    BEGIN_SINGLE_COMMENT (295)
    END_SINGLE_COMMENT (296)
    SINGLE_COMMENT (297)
    BEGIN_MULTI_COMMENT (298)
    END_MULTI_COMMENT (299)
    MULTI_COMMENT (300)
    WHITE_SPACE (301)
    IDENTIFIER <myCharArray> (302) 1 11 12 117 118 131 155 156 169 176 196
    INTEGER_CONST <myIntVal> (303) 5
    CHAR_CONST <myCharVal> (304) 7
    FLOAT_CONST <myFloatVal> (305) 6
    DOUBLE_CONST <myDoubleVal> (306)
    STRING_LITERAL <myStringVal> (307) 3
    PLUS (308) 29 40
    MINUS (309) 30 41
    MULT (310) 28 36 136 145 146
    DIVIDE (311) 37
    ARROW (312) 12
    INCREMENT (313) 13 22
    DECREMENT (314) 14 23
    RSHIFT (315) 44
    LSHIFT (316) 43
    LT (317) 46
    GT (318) 47
    LEQ (319) 48
    GEQ (320) 49
    EQ (321) 51
    NEQ (322) 52
    BITWISE_OR (323) 58
    LOGICAL_OR (324) 62
    BITWISE_AND (325) 27 54
    LOGICAL_AND (326) 60
    XOR (327) 56
    BITWISE_NOT (328) 31
    LOGICAL_NOT (329) 32
    ELLIPSIS (330) 150
    MODULO (331) 38
    ASGN (332) 93 123
    ENUMERATION_CONST (333) 123
    ADD_ASGN (334) 71
    SUB_ASGN (335) 72
    MULT_ASGN (336) 68
    DIV_ASGN (337) 69
    MOD_ASGN (338) 70
    LSHIFT_ASGN (339) 73
    RSHIFT_ASGN (340) 74
    AND_ASGN (341) 75
    OR_ASGN (342) 77
    XOR_ASGN (343) 76


Nonterminals, with rules where they appear

    $accept (101)
        on left: 0
    primary_expression (102)
        on left: 1 2 3 4
        on right: 8
    constant (103)
        on left: 5 6 7
        on right: 2
    postfix_expression (104)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 9 10 11 12 13 14 21
    argument_expression_list (105)
        on left: 17 18
        on right: 18 19
    argument_expression_list_opt (106)
        on left: 19 20
        on right: 10
    unary_expression (107)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 66
    unary_operator (108)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression (109)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression (110)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression (111)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression (112)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression (113)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression (114)
        on left: 50 51 52
        on right: 51 52 53 54
    AND_expression (115)
        on left: 53 54
        on right: 54 55 56
    exclusive_OR_expression (116)
        on left: 55 56
        on right: 56 57 58
    inclusive_OR_expression (117)
        on left: 57 58
        on right: 58 59 60
    logical_AND_expression (118)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression (119)
        on left: 61 62
        on right: 62 63 64
    conditional_expression (120)
        on left: 63 64
        on right: 64 65 80
    assignment_expression (121)
        on left: 65 66
        on right: 17 18 66 78 79 134 135 141 158
    assignment_operator (122)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression (123)
        on left: 78 79
        on right: 4 9 64 79 187 188 189 190 191 194
    constant_expression (124)
        on left: 80
        on right: 123 168 177
    declaration (125)
        on left: 81
        on right: 184 193 203 207 208
    init_declarator_list_opt (126)
        on left: 82 83
        on right: 81
    declaration_specifiers (127)
        on left: 84 85 86 87
        on right: 81 88 153 154 204
    declaration_specifiers_opt (128)
        on left: 88 89
        on right: 84 85 86 87
    init_declarator_list (129)
        on left: 90 91
        on right: 82 91
    init_declarator (130)
        on left: 92 93
        on right: 90 91
    storage_class_specifier (131)
        on left: 94 95 96 97
        on right: 84
    type_specifier (132)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 85 111
    specifier_qualifier_list (133)
        on left: 111 112
        on right: 113 157
    specifier_qualifier_list_opt (134)
        on left: 113 114
        on right: 111 112
    enum_specifier (135)
        on left: 115 116 117
        on right: 110
    identifier_opt (136)
        on left: 118 119
        on right: 115 116
    enumerator_list (137)
        on left: 120 121
        on right: 115 116 121
    enumerator (138)
        on left: 123
        on right: 120 121
    $@1 (139)
        on left: 122
        on right: 123
    type_qualifier (140)
        on left: 124 125 126
        on right: 86 112 147 148
    function_specifier (141)
        on left: 127
        on right: 87
    declarator (142)
        on left: 128
        on right: 92 93 132 153 204
    pointer_opt (143)
        on left: 129 130
        on right: 128
    direct_declarator (144)
        on left: 131 132 133 134 135 136 137 138
        on right: 128 133 134 135 136 137 138
    type_qualifier_list_opt (145)
        on left: 139 140
        on right: 133 134 136 145 146
    assignment_expression_opt (146)
        on left: 141 142
        on right: 133
    identifier_list_opt (147)
        on left: 143 144
        on right: 138
    pointer (148)
        on left: 145 146
        on right: 129 146
    type_qualifier_list (149)
        on left: 147 148
        on right: 135 139 148
    parameter_type_list (150)
        on left: 149 150
        on right: 137
    parameter_list (151)
        on left: 151 152
        on right: 149 150 152
    parameter_declaration (152)
        on left: 153 154
        on right: 151 152
    identifier_list (153)
        on left: 155 156
        on right: 143 156
    type_name (154)
        on left: 157
        on right: 15 16 26 34
    initializer (155)
        on left: 158 159 160
        on right: 93 161 162
    initializer_list (156)
        on left: 161 162
        on right: 15 16 159 160 162
    designation_opt (157)
        on left: 163 164
        on right: 161 162
    designation (158)
        on left: 165
        on right: 163
    designator_list (159)
        on left: 166 167
        on right: 165 167
    designator (160)
        on left: 168 169
        on right: 166 167
    statement (161)
        on left: 170 171 172 173 174 175
        on right: 176 177 178 185 187 188 189 190 191 192 193
    labeled_statement (162)
        on left: 176 177 178
        on right: 170
    compound_statement (163)
        on left: 179
        on right: 171 204
    block_item_list (164)
        on left: 180 181
        on right: 181 182
    block_item_list_opt (165)
        on left: 182 183
        on right: 179
    block_item (166)
        on left: 184 185
        on right: 180 181
    expression_statement (167)
        on left: 186
        on right: 172
    selection_statement (168)
        on left: 187 188 189
        on right: 173
    iteration_statement (169)
        on left: 190 191 192 193
        on right: 174
    expression_opt (170)
        on left: 194 195
        on right: 186 192 193 199
    jump_statement (171)
        on left: 196 197 198 199
        on right: 175
    translation_unit (172)
        on left: 200 201
        on right: 0 201
    external_declaration (173)
        on left: 202 203
        on right: 200 201
    function_definition (174)
        on left: 204
        on right: 202
    declaration_list_opt (175)
        on left: 205 206
        on right: 204
    declaration_list (176)
        on left: 207 208
        on right: 205 208


State 0

    0 $accept: . translation_unit $end

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  103 type_specifier: FLOAT .

    $default  reduce using rule 103 (type_specifier)


State 2

  100 type_specifier: SHORT .

    $default  reduce using rule 100 (type_specifier)


State 3

   99 type_specifier: CHAR .

    $default  reduce using rule 99 (type_specifier)


State 4

  107 type_specifier: _BOOL .

    $default  reduce using rule 107 (type_specifier)


State 5

  109 type_specifier: _IMAGINARY .

    $default  reduce using rule 109 (type_specifier)


State 6

  108 type_specifier: _COMPLEX .

    $default  reduce using rule 108 (type_specifier)


State 7

  101 type_specifier: INT .

    $default  reduce using rule 101 (type_specifier)


State 8

  104 type_specifier: DOUBLE .

    $default  reduce using rule 104 (type_specifier)


State 9

  102 type_specifier: LONG .

    $default  reduce using rule 102 (type_specifier)


State 10

   98 type_specifier: VOID .

    $default  reduce using rule 98 (type_specifier)


State 11

  105 type_specifier: SIGNED .

    $default  reduce using rule 105 (type_specifier)


State 12

   96 storage_class_specifier: AUTO .

    $default  reduce using rule 96 (storage_class_specifier)


State 13

  106 type_specifier: UNSIGNED .

    $default  reduce using rule 106 (type_specifier)


State 14

  115 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  116               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  117               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 119 (identifier_opt)

    identifier_opt  go to state 33


State 15

  124 type_qualifier: CONST .

    $default  reduce using rule 124 (type_qualifier)


State 16

   95 storage_class_specifier: STATIC .

    $default  reduce using rule 95 (storage_class_specifier)


State 17

   97 storage_class_specifier: REGISTER .

    $default  reduce using rule 97 (storage_class_specifier)


State 18

  125 type_qualifier: RESTRICT .

    $default  reduce using rule 125 (type_qualifier)


State 19

  126 type_qualifier: VOLATILE .

    $default  reduce using rule 126 (type_qualifier)


State 20

   94 storage_class_specifier: EXTERN .

    $default  reduce using rule 94 (storage_class_specifier)


State 21

  127 function_specifier: INLINE .

    $default  reduce using rule 127 (function_specifier)


State 22

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 23

   81 declaration: declaration_specifiers . init_declarator_list_opt ';'
  204 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    MULT  shift, and go to state 34

    ';'       reduce using rule 83 (init_declarator_list_opt)
    $default  reduce using rule 130 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   84 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   85 declaration_specifiers: type_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  110 type_specifier: enum_specifier .

    $default  reduce using rule 110 (type_specifier)


State 27

   86 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   87 declaration_specifiers: function_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  201 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 46
    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  200 translation_unit: external_declaration .

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition .

    $default  reduce using rule 202 (external_declaration)


State 32

  117 enum_specifier: ENUM IDENTIFIER .
  118 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 118 (identifier_opt)
    $default  reduce using rule 117 (enum_specifier)


State 33

  115 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  116               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 48


State 34

  145 pointer: MULT . type_qualifier_list_opt
  146        | MULT . type_qualifier_list_opt pointer

    CONST     shift, and go to state 15
    RESTRICT  shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 140 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   81 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 52


State 36

   82 init_declarator_list_opt: init_declarator_list .
   91 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 53

    $default  reduce using rule 82 (init_declarator_list_opt)


State 37

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


State 38

   92 init_declarator: declarator .
   93                | declarator . ASGN initializer
  204 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    CONST       shift, and go to state 15
    STATIC      shift, and go to state 16
    REGISTER    shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    EXTERN      shift, and go to state 20
    INLINE      shift, and go to state 21
    ASGN        shift, and go to state 54

    '{'       reduce using rule 206 (declaration_list_opt)
    $default  reduce using rule 92 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 57
    declaration_list         go to state 58


State 39

  128 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 59
    '('         shift, and go to state 60

    direct_declarator  go to state 61


State 40

  129 pointer_opt: pointer .

    $default  reduce using rule 129 (pointer_opt)


State 41

   88 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers_opt)


State 42

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 84 (declaration_specifiers)


State 43

   85 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 85 (declaration_specifiers)


State 44

   86 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 45

   87 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 46

    0 $accept: translation_unit $end .

    $default  accept


State 47

  201 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 201 (translation_unit)


State 48

  115 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
  116               | ENUM identifier_opt '{' . enumerator_list ',' '}'

    ENUMERATION_CONST  shift, and go to state 62

    enumerator_list  go to state 63
    enumerator       go to state 64


State 49

  147 type_qualifier_list: type_qualifier .

    $default  reduce using rule 147 (type_qualifier_list)


State 50

  145 pointer: MULT type_qualifier_list_opt .
  146        | MULT type_qualifier_list_opt . pointer

    MULT  shift, and go to state 34

    $default  reduce using rule 145 (pointer)

    pointer  go to state 65


State 51

  139 type_qualifier_list_opt: type_qualifier_list .
  148 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 15
    RESTRICT  shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 139 (type_qualifier_list_opt)

    type_qualifier  go to state 66


State 52

   81 declaration: declaration_specifiers init_declarator_list_opt ';' .

    $default  reduce using rule 81 (declaration)


State 53

   91 init_declarator_list: init_declarator_list ',' . init_declarator

    MULT  shift, and go to state 34

    $default  reduce using rule 130 (pointer_opt)

    init_declarator  go to state 67
    declarator       go to state 68
    pointer_opt      go to state 39
    pointer          go to state 40


State 54

   93 init_declarator: declarator ASGN . initializer
